Fixes for populator, registration and inventory

--- a/alcopastorefront/web/webroot/WEB-INF/messages/base_en.properties
+++ b/alcopastorefront/web/webroot/WEB-INF/messages/base_en.properties
@@ -1454,3 +1454,5 @@ text.quote.edit.confirmation.modal.title=Edit Quote Warning
 text.quote.dateformat=MM/dd/yyyy
 text.quote.dateformat.datepicker.selection=mm/dd/yy
 text.quote.dateformat.datepicker.selection.hint=mm/dd/yyyy
+
+cart.page.continue=Continue
